--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="search-bar">
-<label for="site-search" class="search">search the site</label>
+<label for="site-search" class="search"></label>
 <input type="search" id="site-search" name="q" onkeyup="myFunction()" placeholder="Search">
 </div>
 
