--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 <script src="js/baguetteBox.min.js"></script>
 <script src="js/searchFilter.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
